# codery

./: .gitignore  LICENSE  README.md  codery.wsgi  local_settings.example.py  local_settings.py.example  manage.py  pyproject.toml  requirements.txt  setup.cfg  slurp  slurp-lexisnexis-html.py
codery/: settings.py  urls.py  views.py  wsgi.py
codery/static/css/: style.css
codery/templates/: base.html  bulk-result.html  generic-form.html  logged_out.html  login.html  welcome.html
coding/: admin.py  models.py  views.py
coding/migrations/: 0001_initial.py  0002_codingassignment.py  0003_add_assignment_tagging.py  0004_make_datetime_default_tz_aware.py  0005_make_assignment_tags_study_specific.py  0006_fix_assignment_tag_uniqueness.py  0007_change_assignment_tag_ordering.py  0008_codingassignmentactivity.py  0009_change_coding_activity_ordering.py  0010_auto_20141123_1239.py  011_allow_blank_assignment_tags.py
coding/templates/coding/: assignment-tag-list.html  assignment-tag-list.jinja  assignment.html  assignments.html
pieces/: admin.py  lexis.py  models.py  search.py  views.py
pieces/migrations/: 0001_initial.py  0002_piecetostudyassociation.py  0003_piece_studies.py  0004_add_piece_tagging.py  0005_add_initial_tag.py  0006_make_datetime_default_tz_aware.py  0007_add_verbose_name.py  0008_piecetag_shown_to_coders.py  0009_move_publication_type_to_piece.py  0010_auto_20141123_1239.py  0011_study_urls_clickable.py
pieces/templates/pieces/: import-ln.html  import-result.html  piece-data.html  piece-import-preview.html  piece.html  search.html
